# compilateur-cpp

./: .clangformat  .gitignore  .gitlab-ci.yml  .last-cl-gen  AUTHORS.txt  ChangeLog  Makefile.am  NEWS.txt  README.txt  THANKS.txt  TODO  bootstrap  configure.ac  tests.sh
data/: prelude.tih
doc/: Doxyfile.in
lib/misc/: contract.cc  contract.hh  deref.hh  deref.hxx  endomap.hh  endomap.hxx  error.cc  error.hh  escape.cc  escape.hxx  file-library.cc  file-library.hh  file-library.hxx  fwd.hh  graph.hh  graph.hxx  indent.cc  indent.hh  libmisc.hh  map.hh  map.hxx  pair.hh  pair.hxx  ref.hh  ref.hxx  scoped-map.hh  scoped-map.hxx  separator.hxx  set.hh  set.hxx  symbol.cc  symbol.hh  symbol.hxx  test-deref.cc  test-error.cc  test-escape.cc  test-graph.cc  test-indent.cc  test-scoped.cc  test-separator.cc  (+16 more)
pthl_src/: parse.yy  scan.ll
src/: common.cc  common.hh  local.am  tc.cc  version.cc.in
src/ast/: README.txt  array-exp.cc  array-exp.hh  array-exp.hxx  array-ty.hh  assign-exp.cc  assign-exp.hh  assign-exp.hxx  ast.hh  break-exp.cc  break-exp.hh  break-exp.hxx  call-exp.cc  call-exp.hh  call-exp.hxx  cast-exp.hh  cast-var.hh  class-ty.hh  class-ty.hxx  dec.hh  decs-list.hh  default-visitor.hh  default-visitor.hxx  escapable.cc  escapable.hh  escapable.hxx  exp.hh  exp.hxx  field-init.hh  field-var.cc  field-var.hh  field-var.hxx  field.hh  for-exp.hh  function-dec.cc  function-dec.hh  fwd.hh  if-exp.cc  if-exp.hh  if-exp.hxx  (+54 more)
src/astclone/: cloner.cc  cloner.hxx  libastclone.hh  libastclone.hxx  tasks.cc  tasks.hh  test-cloner.cc
src/bind/: binder.cc  binder.hh  binder.hxx  libbind.cc  libbind.hh  renamer.cc  renamer.hh  renamer.hxx  tasks.cc  tasks.hh  test-bind.cc
src/callgraph/: call-graph-visitor.cc  fundec-graph.hh  fundec-graph.hxx  libcallgraph.cc  libcallgraph.hh  tasks.cc  tasks.hh
src/desugar/: bounds-checking-visitor.cc  bounds-checking-visitor.hh  desugar-visitor.cc  desugar-visitor.hh  libdesugar.cc  tasks.cc  tasks.hh  test-bounds-checking.cc  test-for-loops-desugar.cc  test-string-cmp-desugar.cc
src/escapes/: escapes-visitor  escapes-visitor.cc  escapes-visitor.hh  escapes-visitor.hxx  libescapes.cc  libescapes.hh  local.am  tasks.cc  tasks.hh
src/frame/: access.cc  access.hh  access.hxx  frame.cc  frame.hh  fwd.hh  libframe.hh  local.am
src/inlining/: inliner.cc  inliner.hh  libinlining.cc  libinlining.hh  pruner.cc  pruner.hh  tasks.cc  tasks.hh
src/llvmtranslate/: escapes-collector.cc  escapes-collector.hh  fwd.hh  libllvmtranslate.cc  libllvmtranslate.hh  llvm-type-visitor.cc  llvm-type-visitor.hh  local.am  tasks.cc  tasks.hh  tiger-runtime.c  translator.cc  translator.hh  translator.hxx
src/object/: binder.cc  binder.hh  desugar-visitor.cc  desugar-visitor.hh  libobject.cc  libobject.hh  renamer.cc  (+12 more)
tcsh/: Makefile.am  generate-swig-mk  run.mk
tcsh/python/: Makefile.am  tc.py  tcsh.test  test-compiler.py  test-front-end.py
tcsh/ruby/: Makefile.am  ltrequire.rb  tc.rb  tcsh.test  test-compiler.rb  test-front-end.rb
tests/: Makefile.am  TODO  config.yaml  epitestsuite.py  fuzzer.py  install.sh  obj.tig  tests.py  tests.sh  tigrou.ascii
(+354 files in other folders)
